# Satpayev_science_tz_hackaton

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  LLM.md  PLAN.md  Points.md  README.md  README_THEMTOGGLE.md  SKILLS.md  THEME_INTEGRATION.md  VISUAL_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  requirements.txt
ai-service/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ai-service/app/: __init__.py  main.py
ai-service/app/api/: router.py
ai-service/app/api/routes/: analyze.py  chat.py  generate.py  health.py
ai-service/app/clients/: __init__.py  llm_client.py
ai-service/app/core/: __init__.py  config.py  errors.py
ai-service/app/prompts/: __init__.py  policy.py
ai-service/app/prompts/analyze/: system.md  user.md
ai-service/app/prompts/chat/: system.md  user.md
ai-service/app/prompts/generate/: system.md  user.md
ai-service/app/prompts/meta/: system.md
ai-service/app/rules/: __init__.py  required_sections.py  scoring_rubrics.py  vague_patterns.py
ai-service/app/schemas/: analyze.py  chat.py  common.py  errors.py  generate.py
ai-service/app/services/: __init__.py  analysis_service.py  chat_service.py  completeness_service.py  findings_service.py  generation_service.py  parser_service.py  recommendations_service.py  scoring_service.py  section_service.py
ai-service/tests/: test_chat_service.py  test_health.py  test_parser_service.py  test_scoring_service.py  test_template_contract.py
(+322 files in other folders)
