[project]
name = "satpayev-ai-service"
version = "0.1.0"
description = "Template FastAPI AI service for Satpayev Science TZ."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "orjson>=3.10.0",
    "python-docx>=1.1.2",
    "pypdf>=4.3.0",
    "pdfplumber>=0.11.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

